<resources>
    <string name="app_name">Triviapp</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome to Triviapp!!</string>
    <string name="CapCit">Capital Cities</string>
    <string name="NoQ">Choose No. of Qs</string>
    <string name="Easy">Easy</string>
    <string name="Hard">Hard</string>
    <string name="SelectDiff">Select Difficulty</string>
    <string name="Start">Start</string>
    <string name="whatIsTheCap">What is the capital city of&#8230;</string>
    <string name="next">Next</string>
    <string name="choose">Choose</string>
    <string name="country">&#8230; Country?</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="menuHome">Home</string>
    <string name="menuReport">Report</string>
    <string name="difficulty">Difficulty</string>
    <string name="noOfQuestions">No. Questions</string>
    <string name="score">Score</string>
    <string name="lastDifficulty">LastDiff</string>
    <string name="lastQs">LastQs</string>
    <string name="lastScore">LastScore</string>
    <string name="register">Register?</string>
    <string name="login">Login</string>
    <string name="btnRegister">Register</string>
    <string name="txtLogin">Login?</string>
    <string name="LogOut">LogOut</string>
    <string name="updateInfo">Update Info</string>
    <string name="deleteMe">Delete Me</string>
    <string name="myAccount">MyAccount</string>
</resources>
