<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Triviapp">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:onClick="settings"/>

    <item
        android:id="@+id/menuReport"
        android:orderInCategory="100"
        android:title="@string/menuReport"
        android:onClick="report"/>

    <item
        android:id="@+id/menuHome"
        android:orderInCategory="100"
        android:title="@string/menuHome"
        android:onClick="home"/>

    <item
        android:id="@+id/menuMyAccount"
        android:orderInCategory="100"
        android:title="MyAccount"
        android:onClick="manageAccount"
        />

    <item
        android:id="@+id/menuLogOut"
        android:orderInCategory="100"
        android:title="@string/LogOut"
        android:onClick="logOut"
        />

</menu>